# backend/src/model/product_type.model.ts
@@ -1,0 +1,6 @@
+export interface Product_type{
+    product_type_id: string;
+    product_type_name: string;
+    created_at: Date;
+    updated_at: Date;
+}
