# backend/src/route/reference.routes.ts
@@ -9,8 +9,9 @@ router.get('/', async (req, res, next) => {
   res.send('respond with a reference resource');
 });
 
+// Roles endpoints
 router.get('/roles', async (req, res, next) => {
-  return res.json(await referenceService.getallRole()); 
+  return res.json(await referenceService.getAllRole()); 
 });
 
 router.post('/roles', async (req, res, next) => {
@@ -24,5 +25,33 @@ router.post('/roles', async (req, res, next) => {
   const result = await referenceService.createRole({role_id, role_name, is_customer, is_business, is_servicer});
   return res.status(201).json(result);
 });
+
+// Brands endpoints
+router.get('/brands', async (req, res, next) => {
+  return res.json(await referenceService.getAllBrand()); 
+});
+
+router.post('/brands', async (req, res, next) => {
+  const {
+    brand_name
+  } = req.body;
+  const result = await referenceService.createBrand({brand_name});
+  return res.status(201).json(result);
+});
+
+// Product Type endpoints
+router.get('/producttypes', async (req, res, next) => {
+  return res.json(await referenceService.getAllProductType()); 
+});
+
+router.post('/producttypes', async (req, res, next) => {
+  const {
+    product_type_name
+  } = req.body;
+  const result = await referenceService.createProductType({product_type_name});
+  return res.status(201).json(result);
+});
+
+//
 
 export default router;
